artshare-service.yml
apiVersion: v1
kind: Service
metadata:
    name: artshare-service
spec:
    selector:
        app: artshare
    ports:
        -   name: artshare-service
            protocol: TCP
            port: 80
            targetPort: 80
