artshare-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: artshare-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        -   host: "artshare.jeff"
            http:
                paths:
                    -   path: /?(.*)
                        pathType: Prefix
                        backend:
                            service:
                                name: artshare-service
                                port:
                                    number: 80
                    -   path: /api/?(.*)
                        pathType: Prefix
                        backend:
                            service:
                                name: artshare-service
                                port:
                                    number: 8000
